--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "handler.js",
   "scripts": {
     "test": "serverless-bundle test"
+
   },
-  "author": "",
+  "author": "Alex Firestone",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.766.0",
+    "jest": "^26.5.2",
     "serverless-bundle": "2.0.0",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3"
@@ -23,3 +25,4 @@
     "uuid": "^7.0.3"
   }
 }
+
