Reorganizing the repo

--- a/services/notes/serverless.yml
+++ b/services/notes/serverless.yml
@@ -12,7 +12,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: prod
+  stage: dev
   region: us-west-1
 
   # These environment variables are made available to our functions
@@ -34,7 +34,6 @@ provider:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource: "arn:aws:dynamodb:us-west-1:647061924968:table/notes"
-
 
 functions:
   # Defines an HTTP API endpoint that calls the main function in create.js
@@ -106,7 +105,9 @@ functions:
           method: post
           cors: true
           authorizer: aws_iam
+
 # Create our resources with separate CloudFormation templates
-  resources:
-    # API Gateway Errors
-    - ${file(resources/api-gateway-errors.yml)}
+resources:
+  # API Gateway Errors
+  - ${file(resources/api-gateway-errors.yml)}
+
